springboot-kafka-consumer/openshift/openshift.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-consumer
  labels:
    app: kafka-consumer
spec:
  ports:
    - port: 8090
      name: http
  selector:
    app: kafka-consumer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumer
  labels:
    app: kafka-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumer
  template:
    metadata:
      labels:
        app: kafka-consumer
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/kafka-tracing/kafka-consumer
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
