springboot-kafka-consumer/openshift/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kafka-consumer
spec:
  hosts:
    - "kafka-consumer"
  http:
    - route:
        - destination:
            host: kafka-consumer
            port:
              number: 8090
